--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav>
+    <nav >
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -17,7 +17,65 @@
         </ul>
     </nav>
 
-    <!--  -->
+    <!-- heading section  -->
+    <section class="heading">
+        <h1>Welcome to Our Website</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+        <button>Learn More</button>
+    </section>
     
+    <!--buttons  -->
+    <section class="buttons">
+        <div class="button-container">
+            <button>Button 1</button>
+            <button>Button 2</button>
+            <button>Button 3</button>
+            <button>Button 4</button>
+            <button>Button 5</button>
+        </div>
+        <div class="button-container">
+            <button>Button 1</button>
+            <button>Button 2</button>
+            <button>Button 3</button>
+            <button>Button 4</button>
+            <button>Button 5</button>
+        </div>
+    </section>
+
+    <!-- cards -->
+     <section>
+        <div class="card-container">
+            <div class="card">
+                <img src="https://source.unsplash.com/random/500x300" alt="Image 1">
+                <h2>Card Title 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+            </div>
+            <div class="card">
+                <img src="https://source.unsplash.com/random/500x300" alt="Image 2">
+                <h2>Card Title 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+            </div>
+            <div class="card">
+                <img src="https://source.unsplash.com/random/500x300" alt="Image 2">
+                <h2>Card Title 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+            </div>
+            <div class="card">
+                <img src="https://source.unsplash.com/random/500x300" alt="Image 2">
+                <h2>Card Title 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+            </div>
+            <div class="card">
+                <img src="https://source.unsplash.com/random/500x300" alt="Image 2">
+                <h2>Card Title 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+            </div>
+            <div class="card">
+                <img src="https://source.unsplash.com/random/500x300" alt="Image 2">
+                <h2>Card Title 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tellus id neque ultricies consectetur.</p>
+            </div>
+            
+     </section>
 </body>
 </html>
