--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
+    <title>Assignment-1</title>
 </head>
 <body>
     
